Fixed mis-alignment within the main.css

--- a/style/main.css
+++ b/style/main.css
@@ -268,6 +268,7 @@ div.fade-right {
     display: flex;
     width: 100%;
     justify-content: flex-end;
+    transform: translateY(-35px);
 }
 
 .home-event .more-event-info > a
